absolute pos woring with invisible div inside parent but the div moves with the scroll, must use fixed pose or scroll magic pin

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -13,12 +13,13 @@
 .fixed-widgets-layout {
 	position:relative;
 	height:100%;
-	padding-top:300px !important;
+	padding-top:200px !important;
 }
 
 .fixed-widget {
 	position:absolute;
-	top:40px;
+	width:100%;
+	top:0px;
 }
 
 .fade-enter-active, .fade-leave-active {
